Update: message for loading initial hp